--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.14.1",
     "quill-delta-to-html": "^0.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-simple-storage": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
